Working Adding and Viewing

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,9 +6,16 @@
     tools:context=".fragments.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <ListView
+
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="4dp"
+        android:id="@+id/doctor_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+
+    </ListView>
 
 </FrameLayout>
