--- a/app/src/main/res/layout/fragment_add_medical_history.xml
+++ b/app/src/main/res/layout/fragment_add_medical_history.xml
@@ -19,9 +19,10 @@
         android:textSize="30sp" />
 
     <ImageView
-        android:layout_width="175sp"
-        android:layout_height="150sp"
+        android:layout_width="175dp"
+        android:layout_height="150dp"
         android:layout_gravity="center"
+        android:scaleType="center"
         android:id="@+id/prescription_image_view" />
 
     <Button
@@ -48,7 +49,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Select  Date"
+        android:hint="Select Date"
         android:gravity="center_horizontal"
         android:textSize="20sp"
         android:layout_gravity="center_horizontal"
